# janus

./: .gitignore  CHANGELOG.md  LICENSE.md  README.org  flake.nix  foldl.patch  hie.yaml  janus.cabal
cbits/: janus.c  janus.h
src/: Janus.hs
src/Janus/: Fix.hs  Typed.hs
src/Janus/Backend/: C.hs
src/Janus/Backend/C/: Build.hs  CUDA.hs  LinuxX86_64.hs
src/Janus/Backend/C/CUDA/: Foreign.hsc
src/Janus/Command/: Array.hs  Case.hs  Cond.hs  Format.hs  IO.hs  Range.hs  Ref.hs  TicToc.hs  While.hs
src/Janus/Control/: Fold.hs  Pipe.hs  Step.hs  Stream.hs  Unfold.hs
src/Janus/Expression/: Bits.hs  Bool.hs  Cast.hs  Cond.hs  Eq.hs  Extract.hs  Inject.hs  Integral.hs  Let.hs  Math.hs  MurmurHash.hs  Ord.hs
src/Janus/Expression/Let/: Do.hs
src/Janus/FFI/: Arg.hs  Ret.hs
test/Test/Janus/: Fix.hs
test/Test/Janus/Backend/C/: CUDA.hs
test/Test/Janus/Expression/: Let.hs
